# Financial-Analyst-AI-Assistant

./: .env.example  .gitignore  README.md  app.py  main.py  paths.py  pyproject.toml
DB/0932c902-ee59-43a4-b392-2426cb7a1ffb/: index_metadata.pickle
DB/b868b594-1f46-44fe-a86b-34ae288e32ca/: index_metadata.pickle
app/: chatbot.py
config/: config.yaml  prompt_config.yaml
src/chunk_document/: document_chunker.py
src/db_setup/: initialize_DB.py
src/embed_document/: doc_embedder.py
src/embed_query/: query_embedder.py
src/file_uploader/: upload_document.py
src/load_pdf_file/: load_pdf.py
src/logging/: logger.py
src/prompts/: prompt_builder.py
src/response_generator/: generate_response.py
src/retrieve_documents/: doc_retriever.py
src/sessions/: session_store.py  summarize_memory.py
src/store_vectors/: store_vector.py
