[project]
name = "financial-analyst-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pypdf>=6.8.0",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
]
